--- a/index.html
+++ b/index.html
@@ -89,6 +89,15 @@
       .button-wrapper {
         margin-top: 10px;
       }
+      
+      .calculator {
+        padding: 10px;
+      }
+      
+      h2 {
+        font-size: 24px;
+        margin-bottom: 10px;
+      }
     }
   </style>
 </head>
