--- a/index.html
+++ b/index.html
@@ -16,8 +16,6 @@
       padding: 20px;
       margin-bottom: 40px;
       box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1);
-      display: inline-block;
-      margin-right: 20px;
     }
 
     h2 {
@@ -65,8 +63,6 @@
       width: 100%;
       border-collapse: collapse;
       margin-top: 20px;
-      background-color: #f2f2f2;
-      color: #333;
     }
 
     .result-table th,
@@ -74,6 +70,11 @@
       padding: 8px;
       text-align: left;
       border-bottom: 1px solid #ddd;
+    }
+
+    .result-table th {
+      background-color: #f2f2f2;
+      color: #333;
     }
 
     @media screen and (max-width: 600px) {
@@ -175,57 +176,32 @@
     </div>
     <table id="resultTable3" class="result-table"></table>
   </div>
-  
-  <div class="calculator">
-    <h2>Конкулятор 4</h2>
-    <div class="input-group">
-      <label for="input4_1">Число 1</label>
-      <input type="number" id="input4_1" placeholder="Число 1">
-    </div>
-    <div class="input-group">
-      <label for="input4_2">Число 2</label>
-      <input type="number" id="input4_2" placeholder="Число 2">
-    </div>
-    <div class="input-group">
-      <label for="input4_3">Число 3</label>
-      <input type="number" id="input4_3" placeholder="Число 3">
-    </div>
-    <div class="input-group">
-      <label for="input4_4">Число 4</label>
-      <input type="number" id="input4_4" placeholder="Число 4">
-    </div>
-    <div class="input-group">
-      <label for="input4_5">Число 5</label>
-      <input type="number" id="input4_5" placeholder="Число 5">
-    </div>
-    <div class="button-wrapper">
-      <button onclick="calculate(4)">Равно</button>
-    </div>
-    <table id="resultTable4" class="result-table"></table>
-  </div>
 
   <script>
-    function calculate(calculatorNumber) {
-      const inputIds = [];
-      const tableId = "resultTable" + calculatorNumber;
-      for (let i = 1; i <= 5; i++) {
-        const inputId = "input" + calculatorNumber + "_" + i;
-        inputIds.push(inputId);
-      }
-      const inputs = inputIds.map(id => Number(document.getElementById(id).value));
-      const sum = inputs.reduce((a, b) => a + b, 0);
-      const average = sum / inputs.length;
-      const resultHTML = `
-        <tr>
-          <th>Сумма</th>
-          <td>${sum}</td>
-        </tr>
-        <tr>
-          <th>Среднее значение</th>
-          <td>${average.toFixed(2)}</td>
-        </tr>
-      `;
-      document.getElementById(tableId).innerHTML = resultHTML;
+    function calculate(calculatorId) {
+      var inputIds = [
+        ['input1_1', 'input1_2', 'input1_3', 'input1_4', 'input1_5'],
+        ['input2_1', 'input2_2', 'input2_3', 'input2_4', 'input2_5'],
+        ['input3_1', 'input3_2', 'input3_3', 'input3_4', 'input3_5']
+      ];
+      var inputs = inputIds[calculatorId - 1].map(id => parseFloat(document.getElementById(id).value));
+      var result = calculateLogicalNumber(inputs);
+      var resultTable = document.getElementById('resultTable' + calculatorId);
+      resultTable.innerHTML = '';
+      var row = resultTable.insertRow(0);
+      var cell = row.insertCell(0);
+      cell.innerHTML = 'Результат:';
+      cell = row.insertCell(1);
+      cell.innerHTML = result;
+    }
+
+    function calculateLogicalNumber(numbers) {
+      // Здесь можно использовать свой алгоритм для расчета
+
+      // В данном примере просто находим среднее арифметическое введенных чисел
+      var sum = numbers.reduce((acc, num) => acc + num, 0);
+      var average = sum / numbers.length;
+      return average.toFixed(2);
     }
   </script>
 </body>
